update EDA Location

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,21 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.2.2\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
     }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "print(pd.__version__)"
-   ]
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
